feature(map): add map mock component, add width/height/background css props

--- a/src/components/noi-mobility-traffic/noi-mobility-traffic.css
+++ b/src/components/noi-mobility-traffic/noi-mobility-traffic.css
@@ -1,3 +1,6 @@
 :host {
   display: block;
+  background: var(--noi-mt-background);
+  width: var(--noi-mt-width);
+  height: var(--noi-mt-height);
 }
