feature: fetch and add A22 VMS path

--- a/src/components/noi-mobility-traffic/noi-mobility-traffic.css
+++ b/src/components/noi-mobility-traffic/noi-mobility-traffic.css
@@ -16,3 +16,12 @@
 .map {
   flex: 1;
 }
+
+leaflet-circle, leaflet-marker, leaflet-polyline {
+  display: none;
+}
+
+.leaflet-tile-pane {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
