--- a/src/components/noi-mobility-traffic/blocks/map/map.css
+++ b/src/components/noi-mobility-traffic/blocks/map/map.css
@@ -11,7 +11,19 @@
   color: #5b879f;
   fill: #88b2ca;
   opacity: 1.0;
-  fill-opacity: 0.8;
+  fill-opacity: 1;
+}
+
+.noi-highway-station--hover {
+  fill: red;
+}
+
+.noi-highway-station-selected {
+  stroke-width: 3;
+  color: #fff;
+  fill: #346e97;
+  opacity: 1.0;
+  fill-opacity: 1;
 }
 
 /* leaflet required styles */
