--- a/src/components/noi-mobility-traffic/blocks/map/map.css
+++ b/src/components/noi-mobility-traffic/blocks/map/map.css
@@ -30,6 +30,33 @@
   transition: fill 0.8s ease-out;
 }
 
+.noi-map-popup {
+  min-width: 200px;
+}
+
+.noi-map-station-popup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.noi-map-station-popup__header {
+  height: 40px;
+  color: #346e97;
+  font-size: large;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.noi-map-station-popup__btn {
+  --background: rgba(87, 173, 57, 1);
+  --color: #fff;
+}
+
+
+ 
 /* leaflet required styles */
 
 .leaflet-tile-pane {
@@ -503,20 +530,18 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-popup {
   position: absolute;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
+
 .leaflet-popup-content-wrapper {
   padding: 1px;
   text-align: left;
-  border-radius: 12px;
 }
+
 .leaflet-popup-content {
-  margin: 13px 19px;
-  line-height: 1.4;
+  margin: 0;
 }
-.leaflet-popup-content p {
-  margin: 18px 0;
-}
+
 .leaflet-popup-tip-container {
   width: 40px;
   height: 20px;
@@ -526,6 +551,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
   overflow: hidden;
   pointer-events: none;
 }
+
 .leaflet-popup-tip {
   width: 17px;
   height: 17px;
@@ -538,30 +564,18 @@ svg.leaflet-image-layer.leaflet-interactive path {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
 .leaflet-popup-content-wrapper,
 .leaflet-popup-tip {
   background: white;
   color: #333;
   box-shadow: 0 3px 14px rgba(0,0,0,0.4);
 }
+
 .leaflet-container a.leaflet-popup-close-button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 4px 4px 0 0;
-  border: none;
-  text-align: center;
-  width: 18px;
-  height: 14px;
-  font: 16px/14px Tahoma, Verdana, sans-serif;
-  color: #c3c3c3;
-  text-decoration: none;
-  font-weight: bold;
-  background: transparent;
+  display: none;
 }
-.leaflet-container a.leaflet-popup-close-button:hover {
-  color: #999;
-}
+
 .leaflet-popup-scrolled {
   overflow: auto;
   border-bottom: 1px solid #ddd;
