--- a/src/components/noi-mobility-traffic/components/button/button.scss
+++ b/src/components/noi-mobility-traffic/components/button/button.scss
@@ -65,6 +65,17 @@
   pointer-events: none;
 }
 
+::slotted(*) .button-has-icon-only.button-clear {
+  --padding-top: 12px;
+  --padding-end: 12px;
+  --padding-bottom: 12px;
+  --padding-start: 12px;
+  margin: 0;
+  width: 48px;
+  height: 48px;
+  --background: transparent;
+}
+
 // Solid Button
 // --------------------------------------------------
 
@@ -191,28 +202,6 @@
 
   z-index: 1;
 }
-
-
-// Button Icons
-// --------------------------------------------------
-
-::slotted(noi-icon) {
-  font-size: 1.4em;
-  pointer-events: none;
-}
-
-::slotted(noi-icon[slot="start"]) {
-  @include margin(0, .3em, 0, -.3em);
-}
-
-::slotted(noi-icon[slot="end"]) {
-  @include margin(0, -.2em, 0, .3em);
-}
-
-::slotted(noi-icon[slot="icon-only"]) {
-  font-size: 1.8em;
-}
-
 
 
 // Button: States
