--- a/src/components/noi-mobility-traffic/blocks/map/map.css
+++ b/src/components/noi-mobility-traffic/blocks/map/map.css
@@ -7,27 +7,22 @@
 /* svg entity styles */
 
 .noi-highway-station {
-  stroke-width: 2;
-  stroke: #5b879f;
-  fill: #88b2ca;
+  stroke-width: 8;
+  stroke: var(--noi-primary);
+  fill: var(--noi-primary-contrast);
   opacity: 1.0;
   fill-opacity: 1;
+  transition: fill 0.5s ease-out;
 }
 
 .noi-highway-station--hover {
   stroke-width: 4;
-  fill: rgba(55, 111, 149, 1);
-  stroke: #fff;
-  transition: fill 0.8s ease-out;
 }
 
-.noi-highway-station-selected {
-  stroke-width: 3;
+.noi-highway-station--selected {
   stroke: #fff;
-  fill: #346e97;
-  opacity: 1.0;
-  fill-opacity: 1;
-  transition: fill 0.8s ease-out;
+  fill: var(--noi-primary);
+  
 }
 
 .noi-map-popup {
