--- a/src/components/noi-mobility-traffic/noi-mobility-traffic.css
+++ b/src/components/noi-mobility-traffic/noi-mobility-traffic.css
@@ -18,28 +18,27 @@ noi-map {
   flex: 1;
 }
 
-noi-card.search {
+.search {
+  background: #fff;
   position: absolute;
-  top: 10%;
+  height: auto;
   width: 100%;
+  bottom: 0;
+  left: 0;
   margin: 0;
   padding: 0;
   z-index: 1;
-  overflow: visible;
-  border-radius: 0;
-}
-
-
-:host.noi-media-gs noi-card.search {
   overflow: hidden;
-  left: 5%;
-  right: 5%;
-  width: auto;
-  border-radius: 5px;
 }
 
-:host.noi-media-gs--landscape  noi-card.search {
-  width: 37%;
-  max-width: 500px;
-  bottom: 10%;
+
+:host.noi-media-gs .search {
+  height: 100%;
+  width: 100%;
+  max-width: 360px;
+}
+
+:host.noi-media-gs--landscape  .search {
+  height: 100%;
+  width: 360px;
 }
