--- a/src/components/noi-mobility-traffic/blocks/stations-modal/stations-modal.css
+++ b/src/components/noi-mobility-traffic/blocks/stations-modal/stations-modal.css
@@ -91,7 +91,7 @@ header {
   overflow: hidden;
   position: relative;
   height: 48px;
-  margin: 8px 16px;
+  margin: 0 16px;
   background: #ffffff;
   font-family: var(--noi-font-family);
   color: var(--noi-primary);
