bugfix(map): fix svgIconPath positioning

--- a/src/components/noi-mobility-traffic/blocks/map/map.css
+++ b/src/components/noi-mobility-traffic/blocks/map/map.css
@@ -4,9 +4,11 @@
   overflow: hidden;
 }
 
+
 /* svg entity styles */
 
 .noi-marker {
+  position: absolute;
   opacity: 1.0;
   fill-opacity: 1;
 }
