--- a/src/components/noi-mobility-traffic/blocks/map/map.css
+++ b/src/components/noi-mobility-traffic/blocks/map/map.css
@@ -13,13 +13,51 @@
   fill-opacity: 1;
 }
 
+.noi-marker > svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.noi-marker:before {
+  content: '';
+  position: relative;
+  display: block;
+  width: 300%;
+  padding-top: 300%;
+  box-sizing: border-box;
+  margin-left: -100%;
+  margin-top: -100%;
+  border-radius: 50%;
+  animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
+}
+
+@keyframes pulse-ring {
+  0% {
+    transform: scale(.63);
+  }
+  80%, 100% {
+    opacity: 0;
+  }
+}
+
+
 .noi-marker--start {
   fill: var(--noi-primary);
+}
+
+.noi-marker--start:before {
+  background-color: rgba(var(--noi-primary-rgb), 0.8);
 }
 
 .noi-marker--end {
   fill: var(--noi-action);
 }
+
+.noi-marker--end:before {
+  background-color: rgba(var(--noi-action-rgb), 0.8);
+}
+
 
 .noi-highway-station {
   stroke-width: 4;
