massive refactor, fix blinking bug in map popup, fetch segments in one go, extract path details component

--- a/src/components/noi-mobility-traffic/blocks/search/search.css
+++ b/src/components/noi-mobility-traffic/blocks/search/search.css
@@ -4,13 +4,30 @@
   align-items: center;
 }
 
-.noi-search__logo {
+/* logo */
+.search__logo {
   margin: 16px 0 8px 0;
   min-height: 36px;
   display: none;
 }
 
-.noi-search__footer-text {
+:host.noi-media-gs .search__logo {
+  display: block;
+}
+
+
+/* search-footer */
+footer {
+  display: none;
+  height: 0;
+}
+
+:host.noi-media-gs footer {
+  display: block;
+  height: auto;
+}
+
+.search-footer__text {
   font-family: var(--noi-font-family);
   font-weight: bold;
   text-transform: uppercase;
@@ -18,51 +35,35 @@
   color: rgba(var(--noi-primary-rgb), 0.3);
   font-size: 23px;
   margin-bottom: -16px;
-  margin-top: auto;
-  display: none;
 }
 
-.noi-search__footer-img {
+.search-footer__img {
   width: 100%;
-  margin-top: auto;
-  min-height: 200px;
-  display: none;
+  min-height: 150px;
 }
 
-:host.noi-media-gs .noi-search__logo {
-  display: block;
-}
 
-:host.noi-media-gs .noi-search__footer-text {
-  display: block;
-}
-
-:host.noi-media-gs .noi-search__footer-img {
-  display: block;
-}
-
-:host.noi-media-gs--landscape .noi-search__footer-img {
-  display: block;
-}
-
-.noi-search__stations {
+/* stations */
+.search__stations {
   width: 100%;
   display: block;
-  flex: 1;
   margin-bottom: auto;
 }
 
-.stations__wrapper {
+
+/* search-stations */
+.search-stations__wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.stations__buttons {
+.search-stations__buttons {
   flex: 1;
 }
 
-.noi-search__reorder-btn {
+/* search-reorder-btn */
+.search-reorder-btn {
   margin-left: auto;
   margin-right: 8px;
   --transition: box-shadow 200ms cubic-bezier(.4, 0, .2, 1),
@@ -75,20 +76,21 @@
   --background-activated-opacity: 0.5;
 }
 
-.noi-search__reorder-btn.noi-activated {
+.search-reorder-btn > svg {
+  fill: var(--noi-action);
+}
+
+.search-reorder-btn.noi-activated {
   --background: #eee;
   --box-shadow: 0px 0px 0px 2px #eee;
 }
 
-.noi-search__reorder-btn.noi-activated > .noi-search__reorder-btn-icon {
+.search-reorder-btn.noi-activated > svg {
   fill: rgba(var(--noi-action-rgb), 0.5);
 }
 
-.noi-search__reorder-btn-icon {
-  fill: var(--noi-action);
-}
-
-.station-btn {
+/* search-station-btn */
+.search-station-btn {
   text-transform: uppercase;
   font-size: 13px;
   font-weight: bold;
@@ -111,25 +113,23 @@
   --border-style: solid;
 }
 
-.station-btn--empty {
+.search-station-btn--empty {
   font-weight: normal;
   --color: rgba(var(--noi-primary-rgb), 0.5);
 }
 
-.station-btn--start {
+.search-station-btn--start {
   --border-color: rgba(var(--noi-primary-rgb), 0.5);
 }
 
-.station-btn--end {
+.search-station-btn--end {
   --border-color: rgba(var(--noi-action-rgb), 0.5);
 }
 
-.station-btn--start > svg {
+.search-station-btn--start > svg {
   fill: var(--noi-primary);
 }
 
-.station-btn--end > svg {
+.search-station-btn--end > svg {
   fill: var(--noi-action);
 }
-
-
