--- a/src/components/noi-mobility-traffic/blocks/map/map.css
+++ b/src/components/noi-mobility-traffic/blocks/map/map.css
@@ -4,9 +4,58 @@
   overflow: hidden;
 }
 
+/* popup container */
+.popup-container {
+  min-width: 200px;
+  visibility: hidden;
+  height: 0;
+  opacity: 0;
+  transition: opacity 1s, visibility 1s;
+}
 
-/* svg entity styles */
+.popup-container--visible {
+  height: auto;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 1s, visibility 1s;
+  opacity: 1;
+}
 
+
+/* highway station popup */
+.station-popup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
+}
+
+.station-popup__header {
+  height: 40px;
+  line-height: 40px;
+  color: #346e97;
+  font-size: large;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.station-popup__content {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding: 0 8px;
+}
+
+.station-popup__btn {
+  --background: var(--noi-action);
+  --color: var(--noi-action-contrast);
+  flex: 1;
+}
+
+
+/* start-end marker */
 .noi-marker {
   position: absolute;
   opacity: 1.0;
@@ -41,7 +90,6 @@
   }
 }
 
-
 .noi-marker--start {
   fill: var(--noi-primary);
 }
@@ -58,7 +106,7 @@
   background-color: rgba(var(--noi-action-rgb), 0.8);
 }
 
-
+/* station circle */
 .noi-highway-station {
   stroke-width: 4;
   stroke: var(--noi-primary);
@@ -88,43 +136,6 @@
   fill: var(--noi-action-contrast);
 }
 
-.noi-map-popup {
-  min-width: 200px;
-}
-
-.noi-map-station-popup {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 8px;
-}
-
-.noi-map-station-popup__header {
-  height: 40px;
-  line-height: 40px;
-  color: #346e97;
-  font-size: large;
-  width: 100%;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.noi-map-station-popup__content {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  padding: 0 8px;
-}
-
-.noi-map-station-popup__btn {
-  --background: var(--noi-action);
-  --color: var(--noi-action-contrast);
-  flex: 1;
-}
-
-
- 
 /* leaflet required styles */
 
 .leaflet-tile-pane {
