--- a/src/components/noi-mobility-traffic/blocks/stations-modal/stations-modal.css
+++ b/src/components/noi-mobility-traffic/blocks/stations-modal/stations-modal.css
@@ -92,12 +92,27 @@ header {
   position: relative;
   height: 48px;
   margin: 0 16px;
+  padding-right: 8px;
   background: #ffffff;
   font-family: var(--noi-font-family);
   color: var(--noi-primary);
   display: flex;
   align-items: center;
 }
+
+.station::before {
+  content: ' ';
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: white;
+  background-size: cover;
+  will-change: transform;
+  z-index: -1;
+}
+
 
 .station--selected {
   background: rgba(var(--noi-primary-rgb), 0.8);
@@ -134,21 +149,6 @@ header {
 
 .station--end.station--selected > .station__icon {
   fill: var(--noi-action-contrast);
-}
-
-
-
-.station::before {
-  content: ' ';
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: white;
-  background-size: cover;
-  will-change: transform;
-  z-index: -1;
 }
 
 noi-input {
