--- a/src/components/noi-mobility-traffic/blocks/path-details/path-details.css
+++ b/src/components/noi-mobility-traffic/blocks/path-details/path-details.css
@@ -3,22 +3,42 @@
   flex-direction: column;
 }
 
+/* header */
 header {
-  background: rgba(var(--noi-primary-rgb), 0.3);
+  background: rgba(var(--noi-primary-rgb), 0.5);
   display: flex;
   width: 100%;
   height: 48px;
-  padding: 8px;
+  line-height: 48px;
   margin-bottom: auto;
+  text-align: center;
 }
 
 .header__section {
-  background: var(--noi-primary-contrast);
-  flex: 1
+  font-family: var(--noi-font-family);
+  flex: 1;
+  justify-content: center;
+  color: var(--noi-primary-contrast);
+  font-weight: bold;
+  text-shadow: 1px 1px rgb(0,0,0,0.3)
 }
 
+/* content */
 .content {
   flex: 1;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+/* header-highway */
+
+.header-highway__title {
+  background: var(--noi-primary-contrast);
+  color: var(--noi-primary);
+  border-radius: 4px;
+  padding: 4px;
+  margin-right: 8px;
+  font-weight: normal;
+  text-shadow: none;
 }
 
