--- a/src/components/noi-mobility-traffic/blocks/path-details/path-details.css
+++ b/src/components/noi-mobility-traffic/blocks/path-details/path-details.css
@@ -5,7 +5,6 @@
 
 /* header */
 header {
-  background: rgba(var(--noi-primary-rgb), 0.5);
   display: flex;
   width: 100%;
   height: 48px;
@@ -14,13 +13,18 @@ header {
   text-align: center;
 }
 
-.header__section {
-  font-family: var(--noi-font-family);
+/* header buttons */
+noi-button.header__section {
   flex: 1;
   justify-content: center;
-  color: var(--noi-primary-contrast);
+  --background: rgba(var(--noi-primary-rgb), 0.3);
+  --color: var(--noi-primary-contrast);
   font-weight: bold;
   text-shadow: 1px 1px rgb(0,0,0,0.3)
+}
+
+noi-button.header__section--active {
+  --background: rgba(var(--noi-primary-rgb), 0.5);
 }
 
 /* content */
