--- a/src/components/noi-mobility-traffic/blocks/station-item/station-item.css
+++ b/src/components/noi-mobility-traffic/blocks/station-item/station-item.css
@@ -4,9 +4,9 @@
   position: relative;
   height: 48px;
   margin: 0 16px;
-  background: #ffffff;
+  background: transparent;
   font-family: var(--noi-font-family);
-  color: var(--noi-primary);
+  color: rgba(var(--noi-primary-rgb), 0.7);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -17,9 +17,25 @@ h3 {
   margin-left: 8px;
 }
 
+:host.station-item--start h3 {
+  color: var(--noi-primary);
+}
+
+:host.station-item--end h3 {
+  color: var(--noi-action);
+}
+
 svg {
   margin: 0 16px;
   fill: var(--noi-primary-contrast);
   stroke-width: 4px;
-  stroke: var(--noi-primary);
+  stroke: rgba(var(--noi-primary-rgb), 0.7);
+}
+
+:host.station-item--start svg {
+  color: var(--noi-primary);
+}
+
+:host.station-item--end svg {
+  color: var(--noi-action);
 }
