--- a/src/components/noi-mobility-traffic/blocks/path-details/path-details.css
+++ b/src/components/noi-mobility-traffic/blocks/path-details/path-details.css
@@ -49,3 +49,9 @@ noi-button.header__section--active {
 noi-station-item:last-of-type {
   margin-bottom: 48px;
 }
+
+/* noi-urban-path */
+noi-urban-path {
+  height: 100%;
+  display: block;
+}
