feature(map, path-details): add path style to map, fix toggle details logic

--- a/src/components/noi-mobility-traffic/blocks/map/map.css
+++ b/src/components/noi-mobility-traffic/blocks/map/map.css
@@ -54,6 +54,12 @@
   flex: 1;
 }
 
+/* noi-path */
+.noi-map-path {
+  stroke: var(--noi-action);
+  stroke-dasharray: 6px;
+  stroke-width: 5px;
+}
 
 /* start-end marker */
 .noi-marker {
