--- a/src/blocks/search/search.css
+++ b/src/blocks/search/search.css
@@ -103,6 +103,7 @@ header {
 
 /* search-footer */
 footer {
+  margin-top: auto;
   display: none;
   height: 0;
   z-index: 999;
@@ -129,8 +130,8 @@ footer {
 }
 
 .search-footer__img {
-  width: 100%;
-  min-height: 150px;
+  width: calc(100% + 2px);
+  height: calc(100% + 4px);
 }
 
 
