--- a/src/noi-mobility-traffic.css
+++ b/src/noi-mobility-traffic.css
@@ -1,8 +1,15 @@
 :host {
   display: block;
   overflow: hidden;
-  width: var(--noi-width);
-  height: var(--noi-height);
+  width: var(--noi-width, 100%);
+  height: var(--noi-height, 100%);
+  --noi-font-family-default: "Roboto", "Helvetica Neue", sans-serif; 
+  --noi-primary-default: #0068B4;
+  --noi-primary-rgb-default: 0, 104, 180;
+  --noi-primary-contrast-default: #ffffff;
+  --noi-action-rgb-default: 87, 173, 57;
+  --noi-action-default: #339966;
+  --noi-action-contrast-default: #ffffff;
 }
 
 .wrapper {
@@ -23,7 +30,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: var(--noi-font-family);
+  font-family: var(--noi-font-family, var(--noi-font-family-default));
   background: var(--noi-primary-contrast);
   color: rgba(var(--noi-primary-rgb), 0.8);
 }
@@ -78,7 +85,7 @@
   }
 }
 .error-btn {
-  --font-family: var(--noi-font-family);
+  --font-family: var(--noi-font-family, var(--noi-font-family-default));
   --background: var(--noi-primary);
   --color: var(--noi-primary-contrast);
 }
