--- a/src/blocks/station-item/station-item.css
+++ b/src/blocks/station-item/station-item.css
@@ -5,7 +5,7 @@
   height: 48px;
   margin: 0 16px 0 48px;
   background: transparent;
-  font-family: var(--noi-font-family);
+  font-family: var(--noi-font-family, var(--noi-font-family-default));
   color: rgba(var(--noi-primary-rgb), 0.7);
   display: flex;
   flex-direction: row;
@@ -21,7 +21,7 @@
 }
 
 h3 {
-  font-family: var(--noi-font-family);
+  font-family: var(--noi-font-family, var(--noi-font-family-default));
   margin-left: 8px;
 }
 
