bugfix: add default font-face #20

--- a/src/blocks/path-details/path-details.css
+++ b/src/blocks/path-details/path-details.css
@@ -21,6 +21,7 @@ header {
   justify-content: center;
   align-items: center;
   color: rgba(var(--noi-primary-rgb), 0.5);
+  font-family: var(--noi-font-family, var(--noi-font-family-default));
 }
 
 .last-sync__icon {
