--- a/src/blocks/urban-path/urban-path.css
+++ b/src/blocks/urban-path/urban-path.css
@@ -5,6 +5,34 @@
   position: relative;
 }
 
+.container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--noi-font-family, var(--noi-font-family-default));
+}
+
+.error { 
+  padding: 8px;
+  margin-left: 8px;
+  margin-right: 8px;
+  text-align: center;
+  border-radius: 4px;
+  background: rgba(var(--noi-error-rgb, 255, 0, 0), 0.7);
+  color: var(--noi-error-contrast, #fff);
+}
+
+.empty {
+  padding: 8px;
+  margin-left: 8px;
+  margin-right: 8px;
+  text-align: center;
+  border-radius: 4px;
+  background: rgba(var(--noi-primary-rgba, 0, 0, 255), 0.7);
+  color: var(--noi-error-contrast, #fff);
+}
+
 /* TODO: implement arrow? */
 /* .content:before {
   content: '';
