feature(path-store,path-details): laod a22 path deometry from json, render a22 path geometry errors, show a22 geometry on the map

--- a/src/blocks/path-details/path-details.css
+++ b/src/blocks/path-details/path-details.css
@@ -102,6 +102,10 @@ noi-button.header__section--active.header__section--err {
       linear-gradient(to bottom, var(--noi-primary), var(--noi-action));
 }
 
+.content__inner--error::before {
+  top: calc(88px + 48px);
+}
+
 /* header-highway */
 
 .header-highway__title {
