--- a/src/blocks/station-item/station-item.css
+++ b/src/blocks/station-item/station-item.css
@@ -1,8 +1,6 @@
 :host {
-  width: 100%;
   overflow: hidden;
   position: relative;
-  height: 48px;
   margin: 0 16px 0 48px;
   background: transparent;
   font-family: var(--noi-font-family, var(--noi-font-family-default));
@@ -20,15 +18,27 @@
   margin-left: 16px;
 }
 
+.container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin-left: 8px;
+  margin-bottom: 8px;
+}
+
 h3 {
   font-family: var(--noi-font-family, var(--noi-font-family-default));
-  margin-left: 8px;
+  margin: 0;
+  padding: 0;
 }
 
 p {
   font-size: 12px;
-  margin-left: 8px;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 }
 
 
