--- a/src/blocks/station-item/station-item.css
+++ b/src/blocks/station-item/station-item.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  cursor: pointer;
 }
 
 :host.station-item--start {
@@ -17,6 +18,13 @@
 :host.station-item--end {
   margin-left: 16px;
 }
+
+:host.station-item--selected {
+  background: rgba(var(--noi-primary-rgb), 0.5);
+  color: var(--noi-primary-contrast);
+  border-radius: 4px;
+}
+
 
 .container {
   flex: 1;
@@ -42,11 +50,11 @@ p {
 }
 
 
-:host.station-item--start h3 {
+:host.station-item--start:not(.station-item--selected) h3 {
   color: var(--noi-primary);
 }
 
-:host.station-item--end h3 {
+:host.station-item--end:not(.station-item--selected) h3 {
   color: var(--noi-action);
 }
 
