feature(map): add css variable that allow chaning color for no-jams segments

--- a/src/blocks/map/map.css
+++ b/src/blocks/map/map.css
@@ -63,7 +63,7 @@
 }
 
 .noi-map-path--jam-none {
-  stroke: var(--noi-action);
+  stroke: var(--noi-jam-none, blue);
 }
 
 .noi-map-path--jam-light {
