--- a/src/blocks/path-details/path-details.css
+++ b/src/blocks/path-details/path-details.css
@@ -13,14 +13,12 @@ header {
   text-align: center;
 }
 
-/* last sync panel */
-.last-sync {
+.container {
   height: 48px;
   line-height: 48px;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgba(var(--noi-primary-rgb), 0.5);
   font-family: var(--noi-font-family, var(--noi-font-family-default));
 }
 
@@ -33,15 +31,6 @@ header {
   color: var(--noi-error-contrast, #fff);
   line-height: normal;
   font-weight: normal;
-}
-
-.last-sync__icon {
-  margin-right: 8px;
-}
-
-.last-sync__date {
-  font-weight: bold;
-  margin-left: 8px;
 }
 
 /* header buttons */
