--- a/src/blocks/urban-path/urban-path.css
+++ b/src/blocks/urban-path/urban-path.css
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: NOI Techpark <digital@noi.bz.it>
+ *
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+
 .content {
   overflow-y: auto;
   overflow-x: hidden;
