--- a/src/components/mixins.scss
+++ b/src/components/mixins.scss
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: NOI Techpark <digital@noi.bz.it>
+ *
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+
 @mixin input-cover() {
   @include position(0, null, null, 0);
   @include margin(0);
