--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: NOI Techpark <digital@noi.bz.it>
+ *
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+
 :root {
   --noi-font-family: "Roboto", "Helvetica Neue", sans-serif; 
   --noi-width: 100%;
